fix(dock): correct unexpected z-index specificity issues
Due to high specificity in the CSS for the dock feature, the z-index was not being applied properly. This update resolves that by overriding the specificity with !important, ensuring the z-index is applied correctly.

--- a/style/layout/dock.scss
+++ b/style/layout/dock.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     background-color: transparent;
 
+    &[style*="z-index"] {
+        z-index: auto !important;
+    }
+
     .dock__item {
         // @include theme-variant-color(color, on-background, 0.6);
         color: var(--b3-theme-on-surface);
